# ICON-sales-projection

./: .gitattributes  README.md  projection.html  pyproject.toml
.github/workflows/: static.yml
legacy/: SalesVisual.py  filter.py  proj3.py
src/sales_projection/: __init__.py  backtest.py  cli.py  data.py  metrics.py  models.py  pipeline.py
